--- a/03-playbook.yml
+++ b/03-playbook.yml
@@ -1,8 +1,9 @@
 - name: install run nginx
   hosts: web
+  become: yes
   tasks:
     - name: install run nginx
       ansible.builtin.package:
       name: nginx
-      state: present 
+        state: present 
         
