--- a/Course.yml
+++ b/Course.yml
@@ -1,11 +1,3 @@
-- name: play level var
-  hosts: local
-  connection: local
-  vars_files:
-   -course.yml
-  tasks:
-  - name: print var
-    vars:
-      COURSE: Ansible 
-    ansible.builtin.debug:
-     msg: "COURSE is:{{COURSE}}, DURATION IS :{{DURATION}} , Trainer is {{Trainer}}"
+COURSE: "DevOps with AWS"
+DURATION: "140hrs"
+Trainer: "SIVA"
