--- a/08-vars.yml
+++ b/08-vars.yml
@@ -1,11 +1,9 @@
 - name: play level var
   hosts: local
   connection: local
-  vars_files:
-   - Course.yml
   tasks:
   - name: print var
     vars:
       #COURSE: Ansible 
     ansible.builtin.debug:
-     msg: "COURSE is:{{COURSE}}, DURATION IS :{{DURATION}} , Trainer is {{Trainer}}"
+     msg: "COURSE is:{{COURSE}}"
