--- a/11-datatypes.yml
+++ b/11-datatypes.yml
@@ -17,7 +17,7 @@
   tasks:
   - name: print vars
     ansible.builtin.debug:
-       msg:
+       msg: |
          program: "{{ PROGRAM }}"
          duration: "{{ DURATION }}"
          is_live: "{{ IS_LIVE }}"
