--- a/15-shell-command.yml
+++ b/15-shell-command.yml
@@ -3,5 +3,6 @@
   connection: local
   tasks:
   - name: command module types
-    ansible.builtin.command: cat/etc/paased | grep root
+    #ansible.builtin.command: cat/etc/paased | grep root
+    ansible.builtin.shell: cat/etc/paased | grep root
     register: users_output
