--- a/15-shell-command.yml
+++ b/15-shell-command.yml
@@ -11,3 +11,8 @@
   - name: print output
     ansible.builtin.debug:
       msg: "{{ users_output }}"
+
+       - name: command module test
+    #ansible.builtin.command: cat /etc/passwd | grep root
+    ansible.builtin.shell: ls -ltr > files.txt
+    register: files_output
