--- a/19-filters.yml
+++ b/19-filters.yml
@@ -4,4 +4,4 @@
   tasks:
    - name: greeting
      ansible.builtin.debug:
-       msg: "hi siva, {{ greeting }}"
+       msg: "hi siva, {{ greetinGREETING | default( good morining) }}"
