--- a/19-filters.yml
+++ b/19-filters.yml
@@ -1,7 +1,13 @@
 - name: demon on filters
   hosts: local
   connection: local
+  vars:
+    topics: "linux, shell, ansible, terraform"
   tasks:
    - name: greeting
      ansible.builtin.debug:
-       msg: "hi siva, {{ greetinGREETING | default( 'good morining' ) }}"
+       msg: "hi siva, {{ greeting | default('good morning') }}"
+
+   - name: convert string to list
+     ansible.builtin.debug:
+       msg: "{{ topics | split(',') }}"
