--- a/19-filters.yml
+++ b/19-filters.yml
@@ -1,21 +1,41 @@
-- name: demon on filters
+- name: demo on filters
   hosts: local
   connection: local
   vars:
-    topics: "linux, shell, ansible, terraform"
-    tags:
-      Name: ansible
+    topics: linux, shell, ansible, terraform
+    course: "DevOps with Ansible"
+    myIp: "192.23.89.123"
+    tagsMap:
+      name: ansible
       project: roboshop
-      component: cat
+      component: catalogue
+    tagsList: [
+        {
+            "key": "name",
+            "value": "ansible"
+        },
+        {
+            "key": "project",
+            "value": "roboshop"
+        },
+        {
+            "key": "component",
+            "value": "catalogue"
+        }
+    ]
   tasks:
-   - name: greeting
-     ansible.builtin.debug:
-       msg: "hi siva, {{ greeting | default('good morning') }}"
+  - name: greeting
+    ansible.builtin.debug:
+      msg: "Hi Sivakumar, {{ GREETING | default('Good Morning') }}"
 
-   - name: convert string to list
-     ansible.builtin.debug:
-       msg: "{{ topics | split(',') }}"
+  - name: convert string to list
+    ansible.builtin.debug:
+      msg: "{{ topics | split(',') }}"
 
-   - name: convert map to list 
-     ansible.builtin.debug:
-       msg: "{{ tags | dict2items }}" 
+  - name: convert map to list
+    ansible.builtin.debug:
+      msg: "{{ tagsMap | dict2items }}"
+
+  - name: convert list to map
+    ansible.builtin.debug:
+      msg: "{{ tagsList | items2dict }}"
